--- a/2.Classification/report/report.tex
+++ b/2.Classification/report/report.tex
@@ -75,7 +75,7 @@ numbers=left }}
 \section{目标任务}
 \begin{enumerate}
     \item 利用神经网络完成 CIFAR-10 数据集的图像分类任务。
-    \item 将训练集划分，所有类别小于等于5的数据仅保留 10\%，剩余部分不变。重新训练，比较结果，并尝试改进。
+    \item 将训练集划分，所有类别小于等于 $5$ 的数据仅保留 10\%，剩余部分不变。重新训练，比较结果，并尝试改进。
 \end{enumerate}
 
 \section{CIFAR-10 数据集}
@@ -189,7 +189,7 @@ REBA 数据集中存在大量重复样本，因此极其容易过拟合。此时
 \subsection{数据增强的使用场景}
 数据增强能增加样本多样性从而提高表现，但它是基于数据的，因此受到数据集本身影响。在 IMBA 数据集上，类别不均导致增强的表现集中体现在优势类，损失下降的同时准确性也下降了。
 
-数据增强对模型的表达能力有要求。在 CIFAR-10 数据集上，数据增强使 Simple Extractor 的性能不升反减，却能使 ResNet50 的性能提升（Loss: $0.3838$, Acc.: $87.35\%$）。
+数据增强对模型的表达能力有要求。在 CIFAR-10 数据集上，数据增强使 Simple Classifier 的性能不升反减，却能使 ResNet50 的性能提升（Loss: $0.3838$, Acc.: $87.35\%$）。
 
 \subsection{IMBA 数据集的实现}
 直接使用 mask 会导致 batch size，引发训练不稳定，同时也不能保证均匀、准确地删去九成劣势数据。同时为了便于实现 REBA 数据集，我采用先删减后读入的方式实现 IMBA 数据集。
